syntax = "proto3";

import "common.proto";

package movie;

option go_package = "movie";

service MovieService {
  rpc GetMovieDatas(common.Empty) returns (MovieDatas) {}
  rpc FetchMovies(FetchMoviesRequest) returns (common.Empty) {}
  rpc RecommendMovie(RecommendMovieRequest) returns (MovieDatas) {}
  rpc GetMovieDetailData(RecommendMovieRequest) returns (MovieData) {}
}

message FetchMoviesRequest {
  string fetchDate = 1;
}
message RecommendMovieRequest {
  int32 movieCd = 1;
}
message MovieData {
  int32 id = 1;
  int32 movieCd = 2;
  int32 audience = 3;
  string title = 4;
  int32 rank = 5;
  string createdAt = 6;
  string updatedAt = 7;
  string poster = 8;
  string rankInten = 9;
  string plot = 10;
  string rankOldAndNew = 11;
  string openDt = 12;
  string genre = 13;
  string director = 14;
  string ratting = 15;
}

message MovieDatas {
  repeated MovieData MovieData = 1;
}